# finger-sdk-samples

./: CHANGELOG.md  README.md  build_all.ps1
cpp/: CMakeLists.txt  README.md  build.bat  build.sh  id3FingerCaptureSamples.sln  id3FingerRecognitionSampleCLI.cpp
cpp/id3FingerCaptureSamples/: ChildView.cpp  ChildView.h  MainFrm.cpp  MainFrm.h  Resource.h  id3FingerCaptureSamples.cpp  id3FingerCaptureSamples.h  id3FingerCaptureSamples.rc  id3FingerCaptureSamples.vcxproj  id3FingerCpp.h
cpp/id3FingerCaptureSamples/res/: id3FingerCaptureSamples.rc2
cpp/id3FingerRecognitionSampleCLI/: CMakeLists.txt  id3FingerRecognitionSampleCLI.cpp
cpp/id3FingerRecognitionSampleNIST/: CMakeLists.txt  README.md  build.sh  id3FingerRecognitionSampleNIST.cpp
data/: an2k-type-04-tpcard.an2  an2k-type-14-tpcard.an2
dotnet/: id3.Finger.Samples.sln
dotnet/id3.Finger.Samples.CaptureWPF/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  id3.Finger.Samples.CaptureWPF.csproj
dotnet/id3.Finger.Samples.CaptureWPF/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
dotnet/id3.Finger.Samples.RecognitionCLI/: Program.cs  id3.Finger.Samples.RecognitionCLI.csproj
dotnet/id3.Finger.Samples.RecognitionCLI/Properties/: AssemblyInfo.cs
dotnet/id3.Finger.Samples.RecognitionNIST/: Program.cs  id3.Finger.Samples.RecognitionNIST.csproj
dotnet/id3.Finger.Samples.RecognitionNIST/Properties/: AssemblyInfo.cs
dotnet/id3.Finger.Samples.RecognitionWF/: Form1.Designer.cs  Form1.cs  Program.cs  id3.Finger.Samples.RecognitionWF.csproj
dotnet/id3.Finger.Samples.RecognitionWF/Properties/: AssemblyInfo.cs  Settings.Designer.cs
dotnet/id3.Finger.Samples.SlapSegmentationWF/: Form1.Designer.cs  Form1.cs  Program.cs  id3.Finger.Samples.SlapSegmentationWF.csproj
dotnet/id3.Finger.Samples.SlapSegmentationWF/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
java/: README.md  RecognitionCLI.java  RecognitionNIST.java  build.bat  build.sh
python/: README.md  RecognitionCLI.py  RecognitionNIST.py
